--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'org.udoo:udooblulib:0.1'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
 
